--- a/LunchTime_iOS/Storyboards/HomeScreen.storyboard
+++ b/LunchTime_iOS/Storyboards/HomeScreen.storyboard
@@ -18,19 +18,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to LunchTime" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uC-CT-CHt">
-                                <rect key="frame" x="98" y="170" width="179" height="21"/>
+                                <rect key="frame" x="98" y="214" width="179" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feeling Hungry?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vP4-oq-0ER">
-                                <rect key="frame" x="125" y="323" width="125" height="21"/>
+                                <rect key="frame" x="125" y="359" width="125" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LunchTimeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="s9C-It-XxG">
-                                <rect key="frame" x="87.5" y="193" width="200" height="120"/>
+                                <rect key="frame" x="87.5" y="237" width="200" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Vhk-0L-30z"/>
                                     <constraint firstAttribute="height" constant="120" id="aLh-MB-hiJ"/>
@@ -56,13 +56,21 @@
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="top" secondItem="bpm-qo-mwf" secondAttribute="top" constant="150" id="9vv-QG-bpU"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="MIX-wu-x2G"/>
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="Qor-8i-XKD"/>
-                            <constraint firstItem="vP4-oq-0ER" firstAttribute="centerY" secondItem="Lc2-os-0Hx" secondAttribute="centerY" id="Rtm-UX-YJK"/>
+                            <constraint firstItem="vP4-oq-0ER" firstAttribute="top" secondItem="s9C-It-XxG" secondAttribute="bottom" constant="2" id="dpt-8j-pLS"/>
                             <constraint firstItem="lIx-oc-q5W" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="vL1-kT-eye"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="top" secondItem="0uC-CT-CHt" secondAttribute="bottom" constant="2" id="zo9-9x-gPi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bpm-qo-mwf"/>
                     </view>
-                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationItem key="navigationItem" id="bzE-7P-16I">
+                        <barButtonItem key="leftBarButtonItem" systemItem="organize" id="baj-f0-JAQ">
+                            <connections>
+                                <action selector="sideMenuButtonPressed:" destination="HH1-Pq-TQV" id="JMc-FG-h9O"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NBh-aI-RpF"/>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BUC-6h-OJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Jls-va-tKD" userLabel="Exit" sceneMemberID="exit"/>
