--- a/LunchTime_iOS/Storyboards/HomeScreen.storyboard
+++ b/LunchTime_iOS/Storyboards/HomeScreen.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="HH1-Pq-TQV">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="H3l-j7-W7d">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Home Screen View Controller-->
+        <!--Home-->
         <scene sceneID="4a8-vY-pYa">
             <objects>
                 <viewController id="HH1-Pq-TQV" customClass="HomeScreenViewController" customModule="LunchTime_iOS" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,29 +18,29 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to LunchTime" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0uC-CT-CHt">
-                                <rect key="frame" x="98" y="214" width="179" height="21"/>
+                                <rect key="frame" x="98" y="170" width="179" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feeling Hungry?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vP4-oq-0ER">
-                                <rect key="frame" x="125" y="359" width="125" height="21"/>
+                                <rect key="frame" x="125" y="315" width="125" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LunchTimeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="s9C-It-XxG">
-                                <rect key="frame" x="87.5" y="237" width="200" height="120"/>
+                                <rect key="frame" x="87.5" y="193" width="200" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="Vhk-0L-30z"/>
                                     <constraint firstAttribute="height" constant="120" id="aLh-MB-hiJ"/>
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lIx-oc-q5W">
-                                <rect key="frame" x="163" y="617" width="48" height="30"/>
+                                <rect key="frame" x="311" y="20" width="48" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="MA3-Ks-PbW"/>
-                                    <constraint firstAttribute="width" constant="48" id="cPE-x2-fYf"/>
+                                    <constraint firstAttribute="width" constant="48" id="1ua-jr-ghh"/>
+                                    <constraint firstAttribute="height" constant="30" id="Nnb-bh-kfm"/>
                                 </constraints>
                                 <state key="normal" title="Logout"/>
                                 <connections>
@@ -52,30 +52,166 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="vP4-oq-0ER" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="2tz-DT-aFQ"/>
-                            <constraint firstItem="bpm-qo-mwf" firstAttribute="bottom" secondItem="lIx-oc-q5W" secondAttribute="bottom" constant="20" id="5lL-hJ-3Oz"/>
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="top" secondItem="bpm-qo-mwf" secondAttribute="top" constant="150" id="9vv-QG-bpU"/>
+                            <constraint firstItem="lIx-oc-q5W" firstAttribute="top" secondItem="bpm-qo-mwf" secondAttribute="top" id="C2c-My-R7M"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="MIX-wu-x2G"/>
                             <constraint firstItem="0uC-CT-CHt" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="Qor-8i-XKD"/>
                             <constraint firstItem="vP4-oq-0ER" firstAttribute="top" secondItem="s9C-It-XxG" secondAttribute="bottom" constant="2" id="dpt-8j-pLS"/>
-                            <constraint firstItem="lIx-oc-q5W" firstAttribute="centerX" secondItem="Lc2-os-0Hx" secondAttribute="centerX" id="vL1-kT-eye"/>
+                            <constraint firstItem="bpm-qo-mwf" firstAttribute="trailing" secondItem="lIx-oc-q5W" secondAttribute="trailing" constant="16" id="pxr-bt-0b2"/>
                             <constraint firstItem="s9C-It-XxG" firstAttribute="top" secondItem="0uC-CT-CHt" secondAttribute="bottom" constant="2" id="zo9-9x-gPi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="bpm-qo-mwf"/>
                     </view>
-                    <navigationItem key="navigationItem" id="bzE-7P-16I">
-                        <barButtonItem key="leftBarButtonItem" systemItem="organize" id="baj-f0-JAQ">
-                            <connections>
-                                <action selector="sideMenuButtonPressed:" destination="HH1-Pq-TQV" id="JMc-FG-h9O"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="NBh-aI-RpF"/>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <tabBarItem key="tabBarItem" title="Home" id="rNg-Ki-mbS"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BUC-6h-OJM" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Jls-va-tKD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-834.39999999999998" y="545.57721139430294"/>
+            <point key="canvasLocation" x="-3521" y="630"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="eVF-9q-9su">
+            <objects>
+                <viewController id="ulf-YC-Z72" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="P8N-SW-cb1">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Profile" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="clR-mp-9JZ">
+                                <rect key="frame" x="149" y="323" width="77" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="77" id="V50-9w-iJN"/>
+                                    <constraint firstAttribute="height" constant="21" id="dWs-HZ-rul"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="clR-mp-9JZ" firstAttribute="centerY" secondItem="P8N-SW-cb1" secondAttribute="centerY" id="4lr-K7-rTL"/>
+                            <constraint firstItem="clR-mp-9JZ" firstAttribute="centerX" secondItem="P8N-SW-cb1" secondAttribute="centerX" id="tvL-jq-w1W"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="8um-fE-TtV"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Profile" id="E2d-fD-grb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dja-EG-drV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-62" y="648"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="b1z-Jp-wMN">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="H3l-j7-W7d" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JfJ-NU-gxY">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="HH1-Pq-TQV" kind="relationship" relationship="viewControllers" id="p78-Td-Tfg"/>
+                        <segue destination="WuP-aj-lLR" kind="relationship" relationship="viewControllers" id="4hV-tb-rw6"/>
+                        <segue destination="zoI-Ve-qDO" kind="relationship" relationship="viewControllers" id="DSK-rd-PJO"/>
+                        <segue destination="e0j-qM-Q1x" kind="relationship" relationship="viewControllers" id="HFv-Ys-Xrl"/>
+                        <segue destination="ulf-YC-Z72" kind="relationship" relationship="viewControllers" id="LXy-BK-mh8"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TqQ-Qn-e9k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1828" y="-62"/>
+        </scene>
+        <!--Events-->
+        <scene sceneID="wV0-ej-wI7">
+            <objects>
+                <viewController id="e0j-qM-Q1x" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eAx-Ku-XLb">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUQ-QN-ofP">
+                                <rect key="frame" x="157.5" y="323" width="60" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="9NJ-MX-aoK"/>
+                                    <constraint firstAttribute="width" constant="60" id="dV0-bY-Myc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rUQ-QN-ofP" firstAttribute="centerY" secondItem="eAx-Ku-XLb" secondAttribute="centerY" id="cfJ-v5-QrL"/>
+                            <constraint firstItem="rUQ-QN-ofP" firstAttribute="centerX" secondItem="eAx-Ku-XLb" secondAttribute="centerX" id="srF-vL-QgI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="uwa-Bj-0iw"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Events" id="Fth-y4-l7V"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WWk-01-lGY" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-815" y="915"/>
+        </scene>
+        <!--Friends-->
+        <scene sceneID="xWk-zK-nZg">
+            <objects>
+                <viewController id="WuP-aj-lLR" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Gab-M1-C6R">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Friends" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CwL-MF-dNb">
+                                <rect key="frame" x="159" y="323" width="57" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="cPl-zh-Ipa"/>
+                                    <constraint firstAttribute="width" constant="57" id="xr5-g9-2nq"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JHC-7j-aNz">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="CwL-MF-dNb" firstAttribute="centerX" secondItem="Gab-M1-C6R" secondAttribute="centerX" id="A6Q-Uf-Wkl"/>
+                            <constraint firstItem="CwL-MF-dNb" firstAttribute="centerY" secondItem="Gab-M1-C6R" secondAttribute="centerY" id="jpy-j5-vFr"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Kqa-XB-AIM"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Friends" id="vHc-pO-6Ml"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="XFZ-sE-HDq" id="qFf-8h-dMB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7sF-fE-0Hm" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="XFZ-sE-HDq">
+                    <connections>
+                        <outlet property="delegate" destination="WuP-aj-lLR" id="haT-qs-vXW"/>
+                        <outlet property="searchContentsController" destination="WuP-aj-lLR" id="QHR-zm-ZL0"/>
+                        <outlet property="searchResultsDataSource" destination="WuP-aj-lLR" id="dHe-sb-lDM"/>
+                        <outlet property="searchResultsDelegate" destination="WuP-aj-lLR" id="4ZU-YH-gZe"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="-2681" y="914"/>
+        </scene>
+        <!--CreateEvent-->
+        <scene sceneID="HlH-ef-FYO">
+            <objects>
+                <viewControllerPlaceholder storyboardName="CreateEvent" id="zoI-Ve-qDO" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="6Sg-y6-RHL"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="UYa-05-LAA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1828" y="627"/>
         </scene>
     </scenes>
     <resources>
